--- a/.github/workflows/build-and-release.yaml
+++ b/.github/workflows/build-and-release.yaml
@@ -67,53 +67,53 @@ jobs:
   # ------------------------
   # Build & Release
   # ------------------------
-  # build-and-release:
-  #   runs-on: windows-latest
-  #   needs: full-lint-and-test
-  #   if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-  #   steps:
-  #     - name: Checkout
-  #       uses: actions/checkout@v4
+  build-and-release:
+    runs-on: windows-latest
+    needs: full-lint-and-test
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
 
-  #     - name: Set up Python
-  #       uses: actions/setup-python@v5
-  #       with:
-  #         python-version: "3.12"
-  #         cache: "pip"
-  #         cache-dependency-path: requirements.txt
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.12"
+          cache: "pip"
+          cache-dependency-path: requirements.txt
 
-  #     - name: Install pip-tools
-  #       run: |
-  #         python -m pip install --upgrade pip setuptools wheel
-  #         pip install pip-tools
+      - name: Install pip-tools
+        run: |
+          python -m pip install --upgrade pip setuptools wheel
+          pip install pip-tools
 
-  #     - name: Compile requirements
-  #       run: |
-  #         pip-compile pyproject.toml --output-file=requirements.txt
+      - name: Compile requirements
+        run: |
+          pip-compile pyproject.toml --output-file=requirements.txt
 
-  #     - name: Install dependencies
-  #       run: |
-  #         pip install -r requirements.txt
-  #         pip install pyinstaller
+      - name: Install dependencies
+        run: |
+          pip install -r requirements.txt
+          pip install pyinstaller
 
-  #     - name: Build .exe with PyInstaller
-  #       run: |
-  #         pyinstaller --onefile --name "Warehouse-management-and-storage-optimization" main.py
+      - name: Build .exe with PyInstaller
+        run: |
+          pyinstaller --onefile --name "Case Y" main.py
 
-  #     - name: Prepare artifact (zip exe)
-  #       run: |
-  #         if (Test-Path "./dist/Warehouse-management-and-storage-optimization.exe") {
-  #           Compress-Archive -Path "./dist/Warehouse-management-and-storage-optimization.exe" -DestinationPath "./dist/Warehouse-management-and-storage-optimization-v${{ github.run_number }}.zip"
-  #         } else {
-  #           Write-Error "Expected dist/Warehouse-management-and-storage-optimization.exe not found"
-  #         }
+      - name: Prepare artifact (zip exe)
+        run: |
+          if (Test-Path "./dist/Case Y.exe") {
+            Compress-Archive -Path "./dist/Case Y.exe" -DestinationPath "./dist/Case-Y-v${{ github.run_number }}.zip"
+          } else {
+            Write-Error "Expected dist/Case Y.exe not found"
+          }
 
-  #     - name: Create GitHub Release and Upload Asset
-  #       uses: softprops/action-gh-release@v2
-  #       with:
-  #         tag_name: v${{ github.run_number }}b
-  #         name: Release v${{ github.run_number }}
-  #         body: Automated build from ${{ github.sha }}
-  #         files: ./dist/Warehouse-management-and-storage-optimization-v${{ github.run_number }}.zip
-  #       env:
-  #         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Create GitHub Release and Upload Asset
+        uses: softprops/action-gh-release@v2
+        with:
+          tag_name: v${{ github.run_number }}b
+          name: Release v${{ github.run_number }}
+          body: Automated build from ${{ github.sha }}
+          files: ./dist/Case-Y-v${{ github.run_number }}.zip
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
