Feat: implement docker into the project
Docs [README.MD]: rewrite readme in details, especialy docker usage.

Ci [devcontainter.json, DockerFile]:
-Spin up dockerfile and devcontainter.json for auto build extension and install dependency
-Move the 'postcommand' snippet to corrected location.
-Update DockFile to use python venv instead of download dependency directly,

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,14 @@ __pycache__/
 *.so
 private
 
+
+# Node
+node_modules/
+dist/
+
+# Devcontainer local overrides
+.devcontainer/devcontainer.local.json
+
 # Distribution / packaging
 .Python
 build/
